test/tests/stages/16_characters_and_strings/valid/extra_credit/switch_on_char_const.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[1]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[1]: 
            CS: 
              CSwitch: 
                TIdentifier: (null)
                Bool: 0
                CConstant: 
                  CConstInt: 
                    TInt: 120
                  None: 
                CCompound: 
                  CB: 
                    List[4]: 
                      CS: 
                        CCase: 
                          TIdentifier: (null)
                          CConstant: 
                            CConstInt: 
                              TInt: 1
                            None: 
                          CReturn: 
                            CConstant: 
                              CConstInt: 
                                TInt: 1
                              None: 
                      CS: 
                        CCase: 
                          TIdentifier: (null)
                          CConstant: 
                            CConstInt: 
                              TInt: 2
                            None: 
                          CReturn: 
                            CConstant: 
                              CConstInt: 
                                TInt: 2
                              None: 
                      CS: 
                        CCase: 
                          TIdentifier: (null)
                          CConstant: 
                            CConstInt: 
                              TInt: 120
                            None: 
                          CReturn: 
                            CConstant: 
                              CConstInt: 
                                TInt: 0
                              None: 
                      CS: 
                        CDefault: 
                          TIdentifier: (null)
                          CReturn: 
                            CUnary: 
                              CNegate: 
                              CConstant: 
                                CConstInt: 
                                  TInt: 1
                                None: 
                              None: 
                List[0]: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
