test/tests/stages/16_characters_and_strings/invalid_types/extra_credit/switch_on_string.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[1]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[1]: 
            CS: 
              CSwitch: 
                TIdentifier: (null)
                Bool: 0
                CString: 
                  CStringLiteral: 
                    List[3]: 
                      TChar: 102
                      TChar: 111
                      TChar: 111
                  None: 
                CCompound: 
                  CB: 
                    List[1]: 
                      CS: 
                        CDefault: 
                          TIdentifier: (null)
                          CReturn: 
                            CConstant: 
                              CConstInt: 
                                TInt: 0
                              None: 
                List[0]: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
